# MyNeuralNetwork

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg.json
data/: target_imdb.txt
src/: run.cpp  test_conv.cpp
src/data_processing/: CMakeLists.txt  data_frame.cpp  data_frame.h  texts_corpus.cpp  texts_corpus.h
src/math/: CMakeLists.txt  Tensor.cpp  Tensor.h  func.h
src/models/: CMakeLists.txt  activation_layer.cpp  activation_layer.h  conv_layer.cpp  conv_layer.h  full_con_layer.cpp  full_con_layer.h  pooling_layer.cpp  pooling_layer.h
src/pipline_runner/: CMakeLists.txt
tests/: test_conv.cpp  test_full.cpp
